# canTranslator

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  argParser.cpp  argParser.h  canString.cpp  canString.h  dataLoader.cpp  dataLoader.h  log.txt  processController.cpp  processController.h  stringReader.cpp  stringReader.h  udpSender.cpp  udpSender.h
tst/: CMakeLists.txt  testCanString.cpp  testMain.cpp  testUdpSender.cpp
